--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "react": "^16.7.0",
         "react-debounce-input": "^3.2.0",
         "react-dom": "^16.7.0",
+        "react-redux": "^6.0.0",
         "react-scripts": "2.1.3",
+        "redux": "^4.0.1",
         "styled-components": "^4.1.3"
     },
     "scripts": {
