--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "react-redux": "^6.0.0",
         "react-scripts": "2.1.3",
         "redux": "^4.0.1",
+        "redux-thunk": "^2.3.0",
+        "reselect": "^4.0.0",
         "styled-components": "^4.1.3"
     },
     "scripts": {
