--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "react-dom": "^16.7.0",
         "react-redux": "^6.0.0",
         "react-scripts": "2.1.3",
+        "react-select": "^2.3.0",
         "redux": "^4.0.1",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
