--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "react": "^16.7.0",
         "react-debounce-input": "^3.2.0",
         "react-dom": "^16.7.0",
+        "react-modal": "^3.8.1",
         "react-redux": "^6.0.0",
         "react-scripts": "2.1.3",
         "react-select": "^2.3.0",
