--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "redux": "^4.0.1",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
-        "styled-components": "^4.1.3"
+        "styled-components": "^4.1.3",
+        "uuid": "^3.3.2"
     },
     "scripts": {
         "start": "react-scripts start",
