--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:-browsers
+      - image: circleci/node:latest-browsers
     steps:
       - checkout
       - run: npm install
