Add command to run lint to package.json and update circle-ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,4 @@ jobs:
           paths:
             - ./node_modules
           key: v1-dependencies-{{ checksum "package-lock.json" }}
-      - run: node node_modules/eslint/bin/eslint -c node_modules/eslint-config-react-app/index.js src
+      - run: npm run lint
