--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "aws-amplify": "^1.1.19",
+        "aws-amplify-react": "^2.3.0",
         "json-server": "^0.14.2",
         "react": "^16.7.0",
         "react-debounce-input": "^3.2.0",
