--- a/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
+++ b/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
@@ -187,7 +187,7 @@
 		"apiplantdexapi": {
 			"Type": "AWS::CloudFormation::Stack",
 			"Properties": {
-				"TemplateURL": "https://s3.amazonaws.com/plantdex-20190203180011-deployment/amplify-cfn-templates/api/plantdexapi-cloudformation-template.json",
+				"TemplateURL": "https://s3.amazonaws.com/plantdex-20190203180011-deployment/amplify-cfn-templates/api/plantdexapi-cloudformation-template.1.json",
 				"Parameters": {
 					"functionplantdexplantsName": {
 						"Fn::GetAtt": [
@@ -198,6 +198,18 @@
 					"functionplantdexplantsArn": {
 						"Fn::GetAtt": [
 							"functionplantdexplants",
+							"Outputs.Arn"
+						]
+					},
+					"functionplantdexfiltersName": {
+						"Fn::GetAtt": [
+							"functionplantdexfilters",
+							"Outputs.Name"
+						]
+					},
+					"functionplantdexfiltersArn": {
+						"Fn::GetAtt": [
+							"functionplantdexfilters",
 							"Outputs.Arn"
 						]
 					}
