--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "react-dom": "^16.7.0",
         "react-modal": "^3.8.1",
         "react-redux": "^6.0.0",
+        "react-router": "^4.3.1",
         "react-scripts": "2.1.3",
         "react-select": "^2.3.0",
         "redux": "^4.0.1",
