--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
         "react": "^16.7.0",
         "react-debounce-input": "^3.2.0",
         "react-dom": "^16.7.0",
+        "react-icons": "^3.3.0",
         "react-modal": "^3.8.1",
         "react-redux": "^6.0.0",
         "react-router": "^4.3.1",
+        "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.3",
         "react-select": "^2.3.0",
+        "react-tag-autocomplete": "^5.8.0",
         "redux": "^4.0.1",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
