Starting to add unit tests

--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
         "not dead",
         "not ie <= 11",
         "not op_mini all"
-    ]
+    ],
+    "devDependencies": {
+        "jest-dom": "^3.0.2",
+        "react-testing-library": "^5.5.3"
+    }
 }
