--- a/amplify/backend/function/plantdexscrape/src/package.json
+++ b/amplify/backend/function/plantdexscrape/src/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "plantdexscrape",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "aws-serverless-express": "^3.3.5",
-    "body-parser": "^1.17.1",
-    "express": "^4.15.2"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "plantdexscrape",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "dependencies": {
+        "aws-serverless-express": "^3.3.5",
+        "body-parser": "^1.17.1",
+        "cheerio": "^1.0.0-rc.2",
+        "express": "^4.15.2"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC"
 }
