Updates to scrape/info api

--- a/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
+++ b/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
@@ -219,6 +219,18 @@
 							"functionplantdexfilters",
 							"Outputs.Arn"
 						]
+					},
+					"functionplantdexscrapeName": {
+						"Fn::GetAtt": [
+							"functionplantdexscrape",
+							"Outputs.Name"
+						]
+					},
+					"functionplantdexscrapeArn": {
+						"Fn::GetAtt": [
+							"functionplantdexscrape",
+							"Outputs.Arn"
+						]
 					}
 				}
 			}
