--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "react-icons": "^3.3.0",
         "react-modal": "^3.8.1",
         "react-redux": "^6.0.0",
+        "react-redux-snackbar": "^1.1.0",
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.3",
